--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>odin-landing-page</title>
 </head>
 <body>
+    <div class="header">
+        <logo>Header Logo</logo>
+        <div class="links">
+            <ul>
+                <a href>header link one</a>
+                <a href>header link two</a>
+                <a href>header link three</a>
+            </ul>
+        </div>
+    </div>
     
 </body>
 </html>
