--- a/index.html
+++ b/index.html
@@ -7,57 +7,63 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <logo>Header Logo</logo>
-        <ul class="links">
-            <li><a href>header link one</a></li>
-            <li><a href>header link two</a></li>
-            <li><a href>header link three</a></li>
-        </ul>
-    </header>
-    <div class="main-box">
-        <div class="main-text">
-            <div class="hero-main-text">This website is awesome</div>
-            <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <button>Sign up</button>
+    <div class="center">
+        <header>
+            <logo>Header Logo</logo>
+            <ul class="links">
+                <li><a href>header link one</a></li>
+                <li><a href>header link two</a></li>
+                <li><a href>header link three</a></li>
+            </ul>
+        </header>
+        <div class="main-box">
+            <div class="main-text">
+                <div class="hero-main-text">This website is awesome</div>
+                <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
+            <div class="showcase-img">this is a placeholder for an image</div>
         </div>
-        <div class="showcase-img">this is a placeholder for an image</div>
-    </div>
-    <div class="info-box">
-        <div class="title">Some random information</div>
-        <div class="img-info-box">
-            <div class="sub-box">
-                <div class="img-box"></div>
-                <div class="caption">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="sub-box">
-                <div class="img-box"></div>
-                <div class="caption">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="sub-box">
-                <div class="img-box"></div>
-                <div class="caption">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="sub-box">
-                <div class="img-box"></div>
-                <div class="caption">this is some subtext under an illustration or image</div>
-            </div>
-        </div>
-    </div>
-        <div class="quote-box">
-            <div class="quote">
-                <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</q>
-                <p>-Thor, God of Thunder</p>
+        <div class="info-box">
+            <div class="title">Some random information</div>
+            <div class="img-info-box">
+                <div class="sub-box">
+                    <div class="img-box"></div>
+                    <div class="caption">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="sub-box">
+                    <div class="img-box"></div>
+                    <div class="caption">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="sub-box">
+                    <div class="img-box"></div>
+                    <div class="caption">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="sub-box">
+                    <div class="img-box"></div>
+                    <div class="caption">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
-        <div class="call-box">
-            <div class="hero-main-text">Call to action! It's time!</div> 
-            <div class="text">Sign up for our product by clicking that button right over there!</div>
-            <button>Sign up</button>
+            <div class="quote-box">
+                <div class="quote">
+                    <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</q>
+                    <p>-Thor, God of Thunder</p>
+                </div>
+            </div>
+            <div class="call-box">
+                <div class="sign-up-info">
+                    <div class="text-group">
+                        <div class="title">Call to action! It's time!</div> 
+                        <div class="text">Sign up for our product by clicking that button right over there!</div>
+                    </div>
+                    <button>Sign up</button>
+                </div>
+            </div>
+            <footer>
+                <div class="footer-info">Copyright © The Odin Project 2021</div>
+            </footer>
         </div>
-        <footer>
-            <div class="footer-info">Copyright © The Odin Project 2021</div>
-        </footer>
     </div>
     
 </body>
